--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,57 +14,58 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
+    --background: 105, 80%, 98%;
+    --foreground: 112, 83%, 7%;
+    --card: 105, 80%, 98%;
+    --card-foreground: 112, 83%, 7%;
+    --popover: 105, 80%, 98%;
+    --popover-foreground: 112, 83%, 7%;
+    --primary: 113, 55%, 52%;
+    --primary-foreground: 112, 83%, 93%;
+    --secondary: 115, 55%, 71%;
+    --secondary-foreground: 112, 83%, 7%;
+    --muted: 115, 55%, 71%;
+    --muted-foreground: 112, 83%, 7%;
+    --accent: 189, 84%, 62%;
+    --accent-foreground: 112, 83%, 7%;
+    --destructive: 0, 84.2%, 60.2%;
+    --destructive-foreground: 0, 0%, 98%;
+    --border: 0, 0%, 89.8%;
+    --input: 0, 0%, 89.8%;
+    --ring: 0, 0%, 3.9%;
+    --chart-1: 12, 76%, 61%;
+    --chart-2: 173, 58%, 39%;
+    --chart-3: 197, 37%, 24%;
+    --chart-4: 43, 74%, 66%;
+    --chart-5: 27, 87%, 67%;
     --radius: 0.5rem;
   }
   .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
+    --background: 105, 80%, 2%;
+    --foreground: 112, 83%, 93%;
+    --card: 105, 80%, 2%;
+    --card-foreground: 112, 83%, 93%;
+    --popover: 105, 80%, 2%;
+    --popover-foreground: 112, 83%, 93%;
+    --primary: 113, 55%, 48%;
+    --primary-foreground: 112, 83%, 7%;
+    --secondary: 115, 55%, 29%;
+    --secondary-foreground: 112, 83%, 93%;
+    --muted: 115, 55%, 29%;
+    --muted-foreground: 112, 83%, 93%;
+    --accent: 189, 84%, 38%;
+    --accent-foreground: 112, 83%, 93%;
+    --destructive: 0, 84.2%, 60.2%;
+    --destructive-foreground: 0, 0%, 98%;
+    --border: 0, 0%, 89.8%;
+    --input: 0, 0%, 89.8%;
+    --ring: 0, 0%, 3.9%;
+    --chart-1: 12, 76%, 61%;
+    --chart-2: 173, 58%, 39%;
+    --chart-3: 197, 37%, 24%;
+    --chart-4: 43, 74%, 66%;
+    --chart-5: 27, 87%, 67%;
+    --radius: 0.5rem;
   }
 }
 
